# type-convert

./: LICENSE  LICENSE.md  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  github-deploy.yml  python-package.yml  python-publish.yml  python-testpypi.yml  release.yml
c/: func.c  milstd1750a32.c  milstd1750a48.c  onescomp.c  twoscomp.c  ufunc.c
src/floatconverter/: twoscomp.py
src/typeconvert/: __init__.py  func.py  njit.py  pyfunc.py  ufunc.py  utils.py
src/typeconvert/_c/: bcd.c  dec32.c  dec64.c  dec64g.c  func.c  func.py  ibm32.c  ibm64.c  milstd1750a32.c  milstd1750a48.c  onescomp.c  ti32.c  ti40.c  twoscomp.c  ufunc.c  ufunc.py  utils.c
src/typeconvert/_py/: bcd.py  dec32.py  dec64.py  dec64g.py  func.py  ibm32.py  ibm64.py  milstd1750a32.py  milstd1750a48.py  onescomp.py  ti32.py  ti40.py  twoscomp.py  ufunc.py
src/typeconvert/c/: func.py  ufunc.py
src/typeconvert/py/: bcd.py  dec32.py  dec64g.py  ibm32.py  milstd1750a32.py  ti40.py  twoscomp.py  ufunc.py
src/typeconvert/types/: bcd.py  dec32.py  dec64.py  milstd1750a32.py  milstd1750a48.py  onescomp.py  ti32.py  twoscomp.py
src/typeconverter/: dec32.py  dec64.py  milstd1750a32.py  njit.py  onescomp.py  pyfunc.py  ti32.py  ti40.py  twoscomp.py  types.py  typing.py  ufunc.py  utils.py
src/typeconverter/types/: dec32.py  dec64.py  dec64g.py  ibm32.py  ibm64.py  milstd1750a32.py  milstd1750a48.py  onescomp.py  ti32.py  ti40.py  twoscomp.py
tests/: conftest.py  test_1750a32.py  test_1750a48.py  test_bcd.py  test_dec32.py  test_dec64.py  test_dec64g.py  test_ibm32.py  test_ibm64.py  test_onescomp.py  test_ti32.py  test_ti40.py  test_twoscomp.py  test_utils.py  twoscomp.py
