[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel", "numpy>=1.17,<1.26"]

[project]
name = "typeconvert"
description = "Convert various unusual data types into integers and floats"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
requires-python = ">=3.8,<3.12"
license = {file = "LICENSE.md"}
dependencies = [
    "numpy>=1.17,<1.26",
    "numba",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
repository = "https://github.com/jolsten/type-convert"

[project.optional-dependencies]
dev = [
  "build",
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel",
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["typeconvert*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=typeconvert --cov-report html"
testpaths = [
    "tests",
]

[tool.check-wheel-contents]
toplevel = "typeconvert,typeconvert_ext"
