[project]
name = "typeconvert"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "cibuildwheel>=2.22.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "setuptools-scm>=8.1.0",
]

[build-system]
requires = ["setuptools>=64", "numpy>=2", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/jolsten/type-convert"

[tool.setuptools_scm]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=typeconvert --cov-report html"
testpaths = [
    "tests",
]

[tool.cibuildwheel]
skip = "pp* *mac* macos-11" # Skip building, PyPy wheel fails
