[metadata]
name = floatinterpreter
version = attr: src.__version__
description = Convert various floating point formats to IEEE754 floats in Python
long_description = file: README.md, LICENSE.md
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7


[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
