[metadata]
name = typeconverter
version = attr: typeconverter.__version__
description = Convert various floating point formats to IEEE754 floats in Python
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7


[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    numba

[options.packages.find]
where = src
